crates/bindings/tests/ui/views2.stderr
error: Views do not take parameters other than `&ViewContext` or `&AnonymousViewContext`
  --> tests/ui/views2.rs:21:1
   |
21 | fn sched_table_view(_: &ViewContext, _args: ScheduledTable) -> Vec<Player> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `scheduled_table_view` in this scope
 --> tests/ui/views2.rs:9:52
  |
9 | #[spacetimedb::table(name = sched_table, scheduled(scheduled_table_view))]
  |                             -----------            ^^^^^^^^^^^^^^^^^^^^ help: a trait with a similar name exists: `sched_table__view`
  |                             |
  |                             similarly named trait `sched_table__view` defined here

error[E0425]: cannot find value `scheduled_table_view` in this scope
  --> tests/ui/views2.rs:9:52
   |
 9 | #[spacetimedb::table(name = sched_table, scheduled(scheduled_table_view))]
   |                                                    ^^^^^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `sched_table_view`
...
21 | fn sched_table_view(_: &ViewContext, _args: ScheduledTable) -> Vec<Player> {
   | -------------------------------------------------------------------------- similarly named function `sched_table_view` defined here
